# Chess

./: .gitignore  Dockerfile
atestat/: atestat.tex  cuprins.tex  listings-langs.sty  titlepage.tex
atestat/1/: mod.tex
atestat/2/: mod.tex
atestat/3/: mod.tex
atestat/3/alg/: cod.tex  eval.tex  gen.tex  general.tex  mod.tex  search.tex
atestat/3/backend/: auth.tex  db.tex  mod.tex  submitgame.tex
atestat/3/frontend/: allgames.tex  css.tex  game.tex  homepage.tex  login.tex  mod.tex  register.tex  userprofile.tex
atestat/4/: mod.tex
atestat/5/: mod.tex
atestat/6/: mod.tex
chess-lib/: Cargo.toml  build.sh
chess-lib/src/: bitboard.rs  board.rs  bot.rs  game.rs  lib.rs  piece.rs  square.rs  transposition.rs  wasm.rs  zobrist.rs
chess-lib/src/bot/: mod.rs  v1.rs
chess-lib/src/movegen/: mod.rs
game-parser/: Cargo.toml
game-parser/src/: main.rs
server/: Cargo.toml  build.sh
server/migrations/: 20240217082509_users.up.sql  20240219201128_games.up.sql  20240415074550_users_token.up.sql  20240415090647_game_difficulty.down.sql  20240415090647_game_difficulty.up.sql
server/src/: auth.rs  main.rs  models.rs
server/src/components/: games_list.rs  mod.rs  navbar.rs
server/src/router/: api.rs  debug.rs  games.rs  index.rs  login.rs  mod.rs  new_game.rs  register.rs  user.rs
ui/: build.sh  bun.lockb  index.css  index.html  package.json  vite.config.js
ui/src/: components.ts  elements.ts  icons.ts  worker.ts
ui/src/components/: board.ts  debug.ts  game.ts  moves.ts
