[package]
name = "chess-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.12", features = ["js"] }
js-sys = "0.3.68"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = ["console"] }
zduny-wasm-timer = "0.2.8"
