[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["tracing", "macros"] }
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
html-to-string-macro = "0.2.5"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "mysql", "time"] }
time = { version = "0.3.34", features = ["formatting"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
